# crypto-analyzer

./: .env-test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  crypto_analyzer_yew.Dockerfile  docker-compose.yml
.github/workflows/: push.yml  push_2.yml  push_obsolete.yml  release.yml
coin_gecko/: Cargo.toml
coin_gecko/src/: lib.rs
coinbase_parser/: Cargo.toml  README.md
coinbase_parser/src/: lib.rs
coinbase_transactions/: Cargo.toml  README.md
coinbase_transactions/benches/: coinbase_transactions.rs
coinbase_transactions/src/: lib.rs
crypto_analyzer_egui/: Cargo.toml
crypto_analyzer_egui/src/: main.rs
crypto_analyzer_server/: Cargo.toml
crypto_analyzer_server/coinbase_actions/: Cargo.toml
crypto_analyzer_server/coinbase_actions/src/: lib.rs
crypto_analyzer_server/kraken_actions/: Cargo.toml
crypto_analyzer_server/kraken_actions/src/: lib.rs
crypto_analyzer_server/parse_csv/: Cargo.toml
crypto_analyzer_server/parse_csv/src/: lib.rs
crypto_analyzer_server/server_response/: Cargo.toml
crypto_analyzer_server/server_response/src/: lib.rs
crypto_analyzer_server/src/: main.rs
crypto_analyzer_yew/: Cargo.toml  index.html
crypto_analyzer_yew/src/: main.rs
crypto_analyzer_yew/src/table_models/: mod.rs
crypto_database/: Cargo.toml  diesel.toml
crypto_database/migrations/2023-03-23-054834_coinbase_transaction/: up.sql
crypto_database/migrations/2023-03-24-172054_coinbase_transactions/: down.sql  up.sql
crypto_database/migrations/2023-04-22-034848_kraken_transactions/: down.sql  up.sql
crypto_database/src/: lib.rs  models.rs  schema.rs
crypto_database/tests/: coinbase_data_tests.rs  coinbase_db.rs  coinbase_db_tests.rs  common.rs  kraken_db.rs  test-context.rs
crypto_database/tests/test_migrations/00000000000000_diesel_initial_test_setup/: down.sql  up.sql
crypto_database/tests/test_migrations/2023-03-31-12000_coinbase_transactions/: up.sql
csv_parser/: Cargo.toml
csv_parser/src/: lib.rs
csv_runner/: Cargo.toml  readme.md
csv_runner/src/: main.rs
kraken_ledgers/: Cargo.toml  readme.md
kraken_ledgers/src/: lib.rs
kraken_parser/: Cargo.toml  readme.md
kraken_parser/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
models_db/: Cargo.toml
models_db/src/: lib.rs  schema.rs
universal_transaction/: Cargo.toml
universal_transaction/src/: lib.rs
