[workspace]
members = [
    "coinbase_transactions",
    "kraken_ledgers",
    "coin_gecko",
    "crypto_analyzer_server",
    "csv_runner",
    "csv_parser",
    "models",
    "crypto_database",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
version = "0.1.0"

[workspace.dependencies]
rust_decimal = { version = "1.28.1", features = ["serde", "serde-with-str"] }
csv = "1.2.0"
serde = { version = "1.0.153", features = ["serde_derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
