[package]
name = "coinbase_transactions"
version = "0.1.0"
authors = ["1x2kb 1x2kb@github.com"]
edition = "2021"

[dependencies]
csv.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal.workspace = true
chrono.workspace = true
csv_parser = { path = "../csv_parser" }
models = { path = "../models" }
models_db = {path = "../models_db" }

[dev-dependencies]
rand = "*"
