[package]
name = "crypto_analyzer_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
parse_csv = { path = "./parse_csv" }
coinbase_actions = { path = "./coinbase_actions" }
serde.workspace = true
chrono.workspace = true
crypto_database = { path = "../crypto_database" }

[dev-dependencies]
coinbase_transactions = { path = "../coinbase_transactions" } # Used in unit testing
kraken_ledgers = { path = "../kraken_ledgers" }               # Used in unit testing
rust_decimal.workspace = true
actix-rt = "2.8.0"
