[package]
name = "crypto_analyzer_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
coinbase_actions = { path = "./coinbase_actions" }
parse_csv = { path = "./parse_csv" }
server_response = { path = "./server_response" }
crypto_database = { path = "../crypto_database" }
serde.workspace = true
chrono.workspace = true


[dev-dependencies]
coinbase_parser = { path = "../coinbase_parser" } # Used in unit testing
kraken_ledgers = { path = "../kraken_ledgers" }               # Used in unit testing
rust_decimal.workspace = true
actix-rt = "2.8.0"
