[package]
name = "crypto_analyzer_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.28.1" }
chrono.workspace = true
serde.workspace = true
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "1.3.0", features = ["serde", "v4", "macro-diagnostics", "js"] }
