[package]
name = "crypto_database"
version.workspace = true
edition = "2021"

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "chrono", "numeric"] }
chrono.workspace = true
rust_decimal.workspace = true
models = { path = "../models" }
serde.workspace = true
dotenvy = "0.15.7"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }

[dev-dependencies]
uuid.workspace = true