[package]
name = "csv_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coinbase_parser = { path = "../coinbase_parser" }
csv_parser = { path = "../csv_parser" }
crypto_database = { path = "../crypto_database" }
