[package]
name = "kraken_ledgers"
version = "0.1.0"
authors = ["1x2kb 1x2kb@github.com"]

[dependencies]
csv.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal.workspace = true
models = { path = "../models" }
chrono.workspace = true

[dev-dependencies]
rand = "*"
