[package]
name = "models_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel.workspace = true
chrono.workspace = true
serde.workspace = true
rust_decimal.workspace = true
models = { path = "../models" }