[package]
name = "parse_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
coinbase_transactions = { path = "../../coinbase_transactions" }
kraken_ledgers = { path = "../../kraken_ledgers" }
serde.workspace = true
csv_parser = { path = "../../csv_parser" }
